Fix T58690: Disable overlay doesn't hide bones